@@ -1,6 +1,8 @@
 20000926
  - (djm) Update X11-askpass to 1.0.2 in RPM spec file
- - (djm) Define _REENTRANT
+ - (djm) Define _REENTRANT to pickup strtok_r() on HP/UX
+ - (djm) Security: fix off-by-one buffer overrun in fake-getnameinfo.c. 
+   Report and fix from Pavel Kankovsky <peak@argo.troja.mff.cuni.cz> 
 
 20000924
  - (djm) Merged cleanup patch from Mark Miller <markm@swoon.net>
